# PuTTie

./: .buildme.sh  .gdbme.sh  .gitignore  .gitmodules  .runme.sh  CMakeLists.txt  LICENCE  README.md  Recipe  build.sh  cmdline.c  compile_flags.txt  conf.h  config.c  mkfiles.pl  pageant.c  pscp.c  psftp.c  psocks.c  putty.h  settings.c  terminal.c
FySTY/: .gitignore  README.md  build.sh  sh_wrapper.cmd  winfrip.c  winfrip.h  winfrip_bgimg.c  winfrip_confstore.c  winfrip_confstore_post.h  winfrip_confstore_pre.h  winfrip_confstore_priv.c  winfrip_confstore_priv.h  winfrip_general.c  winfrip_mouse.c  winfrip_pcre2.c  winfrip_pcre2.h  winfrip_priv.h  winfrip_storage_PuTTY.h  winfrip_storage_file.c  winfrip_storage_priv.c  winfrip_storage_priv.h  winfrip_storage_void.c  winfrip_storage_wrap.h  winfrip_transp.c  winfrip_urls.c
PuTTie/: .buildme.sh  .gitignore  .runme.sh  CMakeLists.txt  README.md  TODO  build.sh  compile_flags.txt  compile_flags.txt.tmpl.Linux  create_shortcut.c  create_shortcut.cxx  no-jump-list-pageant.c  no-jump-list-puttygen.c  no-jump-list.c  stubs-cachepasswords.c  stubs-tests.c  winfrip.c  winfrip.h  winfrip_bgimg.c  winfrip_feature.h  winfrip_feature_bgimg.c  winfrip_feature_bgimg.h  winfrip_feature_cachepassword.c  winfrip_feature_cachepassword.h  winfrip_feature_general.c  winfrip_feature_general.h  winfrip_feature_mouse.c  winfrip_feature_mouse.h  winfrip_feature_storage_general.c  winfrip_feature_storage_general.h  winfrip_feature_storage_host_ca.c  winfrip_feature_storage_host_ca.h  winfrip_feature_storage_host_keys.c  winfrip_feature_storage_host_keys.h  winfrip_feature_storage_priv.c  winfrip_feature_storage_priv.h  winfrip_feature_storage_sessions.c  winfrip_feature_storage_sessions.h  winfrip_feature_trans.c  winfrip_feature_trans.h  (+97 more)
cmake/: licence.cmake
proxy/: interactor.c
sessions/: lucio@lucio-pc.ini
ssh/: ssh.c  userauth2-client.c
terminal/: terminal.c
unix/utils/: filename.c
utils/: conf.c  fgetline.c  version.c
windows/: CMakeLists.txt  console.c  controls.c  dialog.c  gss.c  jump-list.c  network.c  no-jump-list.c  pageant.c  platform.h  plink.c  pterm.c  putty-common.rc2  putty.c  putty.rc  puttygen.c  sftp.c  storage.c  window.c  winfrip.c  winfrip.h  winfrip_bgimg.c  winfrip_confstore.c  winfrip_confstore_post.h  winfrip_confstore_pre.h  winfrip_general.c  winfrip_mouse.c  winfrip_priv.h  winfrip_transp.c  winfrip_urls.c  wingss.c  winhelp.h  winnet.c  winstore.c
windows/utils/: message_box.c
